force-app/main/default/objects/Legal_Updates__c/Legal_Updates__c.object-meta.xml
<CustomObject>
    <description>The information in this section is relative to legal updates pertaining to the case and/or subjects. This includes search warrant review, MOU activity, petition for custody and any other general updates.</description>
    <label>Legal Updates</label>
    <nameField>
        <displayFormat>LA-{YYYY}{MM}-{0}</displayFormat>
        <label>Legal Update ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>