force-app/main/default/objects/Legal_Updates__c/fields/Adopter__c.field-meta.xml
<CustomField>
    <fullName>Adopter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person taking legal ownership of animal through adoption</inlineHelpText>
    <label>Adopter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Adopter)</relationshipLabel>
    <relationshipName>Legal_Updatesemt2</relationshipName>
    <type>Lookup</type>
</CustomField>