force-app/main/default/objects/Legal_Updates__c/fields/Affiant__c.field-meta.xml
<CustomField>
    <fullName>Affiant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person swearing the affidavit</description>
    <inlineHelpText>enter the person swearing the affidavit.</inlineHelpText>
    <label>Affiant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Affiant)</relationshipLabel>
    <relationshipName>Legal_Updates1</relationshipName>
    <type>Lookup</type>
</CustomField>