force-app/main/default/objects/Legal_Updates__c/fields/Affidavit_Type__c.field-meta.xml
<CustomField>
    <fullName>Affidavit_Type__c</fullName>
    <label>Affidavit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warrant Support</fullName>
            </value>
            <value>
                <fullName>Costs</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>