force-app/main/default/objects/Legal_Updates__c/fields/Agency_Asked__c.field-meta.xml
<CustomField>
    <fullName>Agency_Asked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Asked</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Updates</relationshipLabel>
    <relationshipName>Legal_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>