force-app/main/default/objects/Legal_Updates__c/fields/Agency_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the POC for MOU purposes. May not be the signator</description>
    <inlineHelpText>This is the POC for MOU purposes. Mayor may not be the signator.</inlineHelpText>
    <label>Agency Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Agency Point of Contact)</relationshipLabel>
    <relationshipName>Legal_Updates7</relationshipName>
    <type>Lookup</type>
</CustomField>