force-app/main/default/objects/Legal_Updates__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Animal to be fostered</description>
    <label>Animal ID</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Legal Updates</relationshipLabel>
    <relationshipName>Legal_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>