force-app/main/default/objects/Legal_Updates__c/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appeal</label>
    <type>Checkbox</type>
</CustomField>