force-app/main/default/objects/Legal_Updates__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Applicant)</relationshipLabel>
    <relationshipName>Legal_Updates2</relationshipName>
    <type>Lookup</type>
</CustomField>