force-app/main/default/objects/Legal_Updates__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned</label>
    <type>Date</type>
</CustomField>