force-app/main/default/objects/Legal_Updates__c/fields/Boarding_Began__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Began__c</fullName>
    <description>This is the date the boarding of the animal began.</description>
    <inlineHelpText>Date animal begins boarding</inlineHelpText>
    <label>Boarding Began</label>
    <type>Date</type>
</CustomField>