force-app/main/default/objects/Legal_Updates__c/fields/Boarding_Ends__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Ends__c</fullName>
    <description>Date boarding ends</description>
    <inlineHelpText>Enter the date the boarding aggreement ends</inlineHelpText>
    <label>Boarding Ends</label>
    <type>Date</type>
</CustomField>