force-app/main/default/objects/Legal_Updates__c/fields/Boarding_Facility__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boarding Facility</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Boarding Facility)</relationshipLabel>
    <relationshipName>Legal_Updates5</relationshipName>
    <type>Lookup</type>
</CustomField>