force-app/main/default/objects/Legal_Updates__c/fields/Bond_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bond_Amount__c</fullName>
    <description>Amount of bond ordered by the court</description>
    <inlineHelpText>Please enter amount of bond ordered by the court</inlineHelpText>
    <label>Bond Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>