force-app/main/default/objects/Legal_Updates__c/fields/Bond_to_be_Posted_on__c.field-meta.xml
<CustomField>
    <fullName>Bond_to_be_Posted_on__c</fullName>
    <description>The date the court ordered the bond to be posted by</description>
    <inlineHelpText>Please enter the date the court ordered bond to be posted by.</inlineHelpText>
    <label>Bond Due</label>
    <type>Date</type>
</CustomField>