force-app/main/default/objects/Legal_Updates__c/fields/Civil_Proceeding_Type__c.field-meta.xml
<CustomField>
    <fullName>Civil_Proceeding_Type__c</fullName>
    <description>Civil Proceeding resulting from case.</description>
    <label>Civil Proceeding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disposition</fullName>
            </value>
            <value>
                <fullName>Cost of Care</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
            <value>
                <fullName>Fitness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>