force-app/main/default/objects/Legal_Updates__c/fields/Complaint_Due__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Due__c</fullName>
    <label>Complaint Due</label>
    <type>Date</type>
</CustomField>