force-app/main/default/objects/Legal_Updates__c/fields/Court_Order__c.field-meta.xml
<CustomField>
    <fullName>Court_Order__c</fullName>
    <label>Court Order</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Animals Forfeited</fullName>
            </value>
            <value>
                <fullName>Animals Returned</fullName>
            </value>
            <value>
                <fullName>No Bond</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>