force-app/main/default/objects/Legal_Updates__c/fields/Date_Executed__c.field-meta.xml
<CustomField>
    <fullName>Date_Executed__c</fullName>
    <label>Date Executed</label>
    <type>Date</type>
</CustomField>