force-app/main/default/objects/Legal_Updates__c/fields/Date_Records_Produced__c.field-meta.xml
<CustomField>
    <fullName>Date_Records_Produced__c</fullName>
    <label>Date Records Produced</label>
    <type>Date</type>
</CustomField>