force-app/main/default/objects/Legal_Updates__c/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>