force-app/main/default/objects/Legal_Updates__c/fields/Date_Submitted_Filed__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_Filed__c</fullName>
    <label>Date Submitted/Filed</label>
    <type>Date</type>
</CustomField>