force-app/main/default/objects/Legal_Updates__c/fields/Defendants_Case_s_Closed__c.field-meta.xml
<CustomField>
    <fullName>Defendants_Case_s_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if all charges against defendant have been disposed of.</inlineHelpText>
    <label>Defendants Case/s Closed</label>
    <type>Checkbox</type>
</CustomField>