force-app/main/default/objects/Legal_Updates__c/fields/Defense_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Defense_Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defense Counsel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Defense Counsel)</relationshipLabel>
    <relationshipName>Legal_UpdatesemFz</relationshipName>
    <type>Lookup</type>
</CustomField>