force-app/main/default/objects/Legal_Updates__c/fields/Document_Filed__c.field-meta.xml
<CustomField>
    <fullName>Document_Filed__c</fullName>
    <label>Document Filed</label>
    <type>Date</type>
</CustomField>