force-app/main/default/objects/Legal_Updates__c/fields/Draft_Complete__c.field-meta.xml
<CustomField>
    <fullName>Draft_Complete__c</fullName>
    <description>Date was completed internally and ready for signatures</description>
    <inlineHelpText>Date ready to be sent for signature</inlineHelpText>
    <label>Draft Complete</label>
    <type>Date</type>
</CustomField>