force-app/main/default/objects/Legal_Updates__c/fields/Draft_Due__c.field-meta.xml
<CustomField>
    <fullName>Draft_Due__c</fullName>
    <description>Draft of presentation or document ready for internal circulation and edits or approval.</description>
    <inlineHelpText>Draft of presentation or document ready for internal circulation and edits or approval.</inlineHelpText>
    <label>Draft Due</label>
    <type>Date</type>
</CustomField>