force-app/main/default/objects/Legal_Updates__c/fields/Edits_Due__c.field-meta.xml
<CustomField>
    <fullName>Edits_Due__c</fullName>
    <inlineHelpText>Edited presentation or document due for internal circulation and finalization.</inlineHelpText>
    <label>Edits Due</label>
    <type>Date</type>
</CustomField>