force-app/main/default/objects/Legal_Updates__c/fields/Expert__c.field-meta.xml
<CustomField>
    <fullName>Expert__c</fullName>
    <label>Expert</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr. Pam Reid</fullName>
            </value>
            <value>
                <fullName>Dr. Rachel Touroo</fullName>
            </value>
            <value>
                <fullName>Dr. Nicole Eller</fullName>
            </value>
            <value>
                <fullName>Dr. Kristine Baucom</fullName>
            </value>
            <value>
                <fullName>Terry Mills</fullName>
            </value>
            <value>
                <fullName>Kathryn Destreza</fullName>
            </value>
            <value>
                <fullName>Kyle Held</fullName>
            </value>
            <value>
                <fullName>Adam Leath</fullName>
            </value>
            <value>
                <fullName>Dr. Randy Lockwood</fullName>
            </value>
            <value>
                <fullName>Dr. Jason Byrd</fullName>
            </value>
            <value>
                <fullName>Amanda Fitch</fullName>
            </value>
            <value>
                <fullName>Dr.Rob Reisman</fullName>
            </value>
            <value>
                <fullName>Leigh Anne Garrard</fullName>
            </value>
            <value>
                <fullName>John Bolin</fullName>
                <isActive>false</isActive>
                <label>John Bolin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>