force-app/main/default/objects/Legal_Updates__c/fields/Filed_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Filed_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filed/Submitted</label>
    <type>Checkbox</type>
</CustomField>