force-app/main/default/objects/Legal_Updates__c/fields/Final_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Completed__c</fullName>
    <label>Final  Completed</label>
    <type>Date</type>
</CustomField>