force-app/main/default/objects/Legal_Updates__c/fields/Final_Due__c.field-meta.xml
<CustomField>
    <fullName>Final_Due__c</fullName>
    <inlineHelpText>Final presentation or document due for external circulation.</inlineHelpText>
    <label>Final Due</label>
    <type>Date</type>
</CustomField>