force-app/main/default/objects/Legal_Updates__c/fields/Foster_Contact__c.field-meta.xml
<CustomField>
    <fullName>Foster_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual providing temporary home for an animal in ASPCA care,custody and control.</description>
    <label>Foster Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Foster Contact)</relationshipLabel>
    <relationshipName>Legal_Updates8</relationshipName>
    <type>Lookup</type>
</CustomField>