force-app/main/default/objects/Legal_Updates__c/fields/Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Date__c</fullName>
    <description>Date and time hearing is set</description>
    <inlineHelpText>Please enter the date and time of the hearing</inlineHelpText>
    <label>Hearing Date</label>
    <type>Date</type>
</CustomField>