force-app/main/default/objects/Legal_Updates__c/fields/Hearing_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Outcome__c</fullName>
    <inlineHelpText>Choose all applicable</inlineHelpText>
    <label>Hearing Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Court orders forfeiture of animals to county</fullName>
                <label>Court orders forfeiture of animal(s)</label>
            </value>
            <value>
                <fullName>Court orders bond</fullName>
            </value>
            <value>
                <fullName>Court decision pending</fullName>
            </value>
            <value>
                <fullName>Court orders animals be held</fullName>
                <label>Court orders animal(s) be held</label>
            </value>
            <value>
                <fullName>No bond ordered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (Describe in Notes)</label>
            </value>
            <value>
                <fullName>Court order animal(s) returned</fullName>
                <label>Court orders animal(s) returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>