force-app/main/default/objects/Legal_Updates__c/fields/Hearing_Type__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Type__c</fullName>
    <label>Hearing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
            <value>
                <fullName>Criminal Trial</fullName>
            </value>
            <value>
                <fullName>Civil Trial</fullName>
            </value>
            <value>
                <fullName>Deposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>