force-app/main/default/objects/Legal_Updates__c/fields/In_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Review__c</fullName>
    <label>In Review</label>
    <type>Date</type>
</CustomField>