force-app/main/default/objects/Legal_Updates__c/fields/Issuing_Court__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Court__c</fullName>
    <label>Issuing Court</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magistrate/Town</fullName>
            </value>
            <value>
                <fullName>State/District</fullName>
            </value>
            <value>
                <fullName>Federal District Court</fullName>
            </value>
            <value>
                <fullName>State Court of Appeals</fullName>
            </value>
            <value>
                <fullName>Federal Circuit</fullName>
            </value>
            <value>
                <fullName>Supreme Court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>