force-app/main/default/objects/Legal_Updates__c/fields/LA_Assigned__c.field-meta.xml
<CustomField>
    <fullName>LA_Assigned__c</fullName>
    <label>LA Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jennifer Chin</fullName>
            </value>
            <value>
                <fullName>Elizabeth Brandler</fullName>
            </value>
            <value>
                <fullName>Jaime Olin</fullName>
            </value>
            <value>
                <fullName>Robert Hensley</fullName>
            </value>
            <value>
                <fullName>Sandy Christiansen</fullName>
            </value>
            <value>
                <fullName>Meredith Beach</fullName>
            </value>
            <value>
                <fullName>Shannon Poindexter</fullName>
            </value>
            <value>
                <fullName>Tamara Feliciano</fullName>
            </value>
            <value>
                <fullName>Erin Satterthwaite</fullName>
            </value>
            <value>
                <fullName>Donna Lassa</fullName>
            </value>
            <value>
                <fullName>Ross Bergethon</fullName>
                <isActive>false</isActive>
                <label>Ross Bergethon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>