force-app/main/default/objects/Legal_Updates__c/fields/MOU_Notes__c.field-meta.xml
<CustomField>
    <fullName>MOU_Notes__c</fullName>
    <label>MOU Notes</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>