force-app/main/default/objects/Legal_Updates__c/fields/MOU_Scope__c.field-meta.xml
<CustomField>
    <fullName>MOU_Scope__c</fullName>
    <description>The Scope of the MOU, what services has the agency requested from the ASPCA</description>
    <inlineHelpText>Choose all services requested in RFA</inlineHelpText>
    <label>MOU Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
            <value>
                <fullName>Crime Scene Support</fullName>
            </value>
            <value>
                <fullName>Forensic Testing</fullName>
            </value>
            <value>
                <fullName>Forensic Veterinary Services</fullName>
            </value>
            <value>
                <fullName>Sheltering</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Evidence Review</fullName>
            </value>
            <value>
                <fullName>Case Review</fullName>
            </value>
            <value>
                <fullName>Second Chair Support</fullName>
            </value>
            <value>
                <fullName>Disposition</fullName>
            </value>
            <value>
                <fullName>Euthanasia</fullName>
            </value>
            <value>
                <fullName>Disposal of Remains</fullName>
            </value>
            <value>
                <fullName>Out-of-State Sheltering</fullName>
            </value>
            <value>
                <fullName>Evidence Storage</fullName>
            </value>
            <value>
                <fullName>Media and Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>