force-app/main/default/objects/Legal_Updates__c/fields/MOU_Signed__c.field-meta.xml
<CustomField>
    <fullName>MOU_Signed__c</fullName>
    <label>MOU Signed</label>
    <type>Date</type>
</CustomField>