force-app/main/default/objects/Legal_Updates__c/fields/Partner_Agency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Agency</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Partner Agency)</relationshipLabel>
    <relationshipName>Legal_Updates6</relationshipName>
    <type>Lookup</type>
</CustomField>