force-app/main/default/objects/Legal_Updates__c/fields/Payment_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_By__c</fullName>
    <description>the date the defendant has to post the bond for the care of the animals</description>
    <label>Payment Due By</label>
    <type>Date</type>
</CustomField>