force-app/main/default/objects/Legal_Updates__c/fields/Petition_Filed__c.field-meta.xml
<CustomField>
    <fullName>Petition_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Petition Filed</label>
    <type>Checkbox</type>
</CustomField>