force-app/main/default/objects/Legal_Updates__c/fields/Petition_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Petition_Hearing_Date__c</fullName>
    <description>Date petition scheduled in court</description>
    <inlineHelpText>Please enter the date of petition hearing</inlineHelpText>
    <label>Petition Hearing Date</label>
    <type>Date</type>
</CustomField>