force-app/main/default/objects/Legal_Updates__c/fields/Petition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Petition_Notes__c</fullName>
    <label>Petition Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>