force-app/main/default/objects/Legal_Updates__c/fields/Placement_Partner__c.field-meta.xml
<CustomField>
    <fullName>Placement_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a response partner agency receiving ownership of animal(s) through a tranfer aggreement</inlineHelpText>
    <label>Placement Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Placement Partner)</relationshipLabel>
    <relationshipName>Legal_UpdatesemvI</relationshipName>
    <type>Lookup</type>
</CustomField>