force-app/main/default/objects/Legal_Updates__c/fields/Presentation_Draft_Due__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Draft_Due__c</fullName>
    <label>Presentation Draft Due</label>
    <type>Date</type>
</CustomField>