force-app/main/default/objects/Legal_Updates__c/fields/Presentation_Final_Due__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Final_Due__c</fullName>
    <label>Presentation Final Due</label>
    <type>Date</type>
</CustomField>