force-app/main/default/objects/Legal_Updates__c/fields/Presentation_Review_Due__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Review_Due__c</fullName>
    <label>Presentation Review Due</label>
    <type>Date</type>
</CustomField>