force-app/main/default/objects/Legal_Updates__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <inlineHelpText>Please use the physical address where the animal will reside.</inlineHelpText>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>