force-app/main/default/objects/Legal_Updates__c/fields/Prosecutor__c.field-meta.xml
<CustomField>
    <fullName>Prosecutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prosecutor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Prosecutor)</relationshipLabel>
    <relationshipName>Legal_Updates9</relationshipName>
    <type>Lookup</type>
</CustomField>