force-app/main/default/objects/Legal_Updates__c/fields/Records_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Records_Request_Sent__c</fullName>
    <label>Records Request Sent</label>
    <type>Date</type>
</CustomField>