force-app/main/default/objects/Legal_Updates__c/fields/Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Request_Received__c</fullName>
    <description>Date the RFA was received by Legal Advocacy</description>
    <label>Request Received</label>
    <type>Date</type>
</CustomField>