force-app/main/default/objects/Legal_Updates__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Updates (Resident)</relationshipLabel>
    <relationshipName>Legal_Updates4</relationshipName>
    <type>Lookup</type>
</CustomField>