force-app/main/default/objects/Legal_Updates__c/fields/Response_Due__c.field-meta.xml
<CustomField>
    <fullName>Response_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Due</label>
    <type>Checkbox</type>
</CustomField>