force-app/main/default/objects/Legal_Updates__c/fields/Search_Warrant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Search_Warrant_Notes__c</fullName>
    <label>Search Warrant Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>