force-app/main/default/objects/Legal_Updates__c/fields/Sentence__c.field-meta.xml
<CustomField>
    <fullName>Sentence__c</fullName>
    <description>sentences for each count as ordered by the court</description>
    <inlineHelpText>select all that apply to the defendant and charge</inlineHelpText>
    <label>Sentence Test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Jail- (&lt;year)</fullName>
            </value>
            <value>
                <fullName>Prison (&gt; year)</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Restitution</fullName>
            </value>
            <value>
                <fullName>Behind the Shed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>