force-app/main/default/objects/Legal_Updates__c/fields/Statute_Title__c.field-meta.xml
<CustomField>
    <fullName>Statute_Title__c</fullName>
    <label>Statute Title</label>
    <type>TextArea</type>
</CustomField>