force-app/main/default/objects/Legal_Updates__c/fields/Subject_Matter__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter__c</fullName>
    <description>The subject matter areas in a case that an expert has been requested to testify to.</description>
    <inlineHelpText>Select the subject matter detailed in the RFA</inlineHelpText>
    <label>Subject Matter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Behavior</fullName>
            </value>
            <value>
                <fullName>Animal Sheltering</fullName>
            </value>
            <value>
                <fullName>Animal Shelter Medicine</fullName>
            </value>
            <value>
                <fullName>Veterinary Science- Companion Animal</fullName>
                <label>Veterinary Medicine</label>
            </value>
            <value>
                <fullName>Dogfighting</fullName>
            </value>
            <value>
                <fullName>Cockfighting</fullName>
            </value>
            <value>
                <fullName>Animal Cruelty/Neglect</fullName>
            </value>
            <value>
                <fullName>Case Finances</fullName>
            </value>
            <value>
                <fullName>Crime Scene Process</fullName>
            </value>
            <value>
                <fullName>Forensic Veterinary</fullName>
                <label>Forensic Veterinary Science</label>
            </value>
            <value>
                <fullName>Veterinary Science- Large Animal</fullName>
                <isActive>false</isActive>
                <label>Veterinary Science- Large Animal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>