force-app/main/default/objects/Legal_Updates__c/fields/Submitted_Filed__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Filed__c</fullName>
    <label>Submitted/Filed</label>
    <type>Date</type>
</CustomField>