force-app/main/default/objects/Legal_Updates__c/fields/Type_of_Update__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Update__c</fullName>
    <label>Type of Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>